# autotalk

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  FIX_SUMMARY.md  GPU-README.md  LICENSE  PATCH_README.md  README.md  SUMMARY.md  apply-fix.bat  apply-patch.bat  build-all.bat  build-all.ps1  build-gpu.bat  build-gpu.sh  build-metal.sh  build.rs  build.sh  disable_copy.txt  fix-ggml-cpp.ps1  fix-ggml.bat  fix-ggml.ps1  fix-patches.ps1  fix-unicode.bat  fix-whisper.cmd  fix-whisper.patch  fix.txt  fix_build_cuda.sh  install_autotalk.bat  install_autotalk.sh  install_autotalk_fixed.bat  install_autotalk_part2.bat  regfix.cpp  requirements.txt  run.py  test-build.bat  test-windows-build.ps1  test.cpp  test.sh  (+4 more)
.cargo/: config.toml
.github/scripts/: cross-build.sh
.github/workflows/: ci.yml  ci.yml.bak  cross-platform-build.yml  release-gpu.yml  release-gpu.yml.bak  release-mac-metal.yml.bak  release.yml
fix-patches/: README.md  ggml-cpu-fix.cpp
fix_windows/whisper.cpp/ggml/src/ggml-cpu/: ggml-cpu.cpp
fix_windows/whisper.cpp/src/: whisper.cpp
ggml/src/ggml-cpu/: ggml-cpu.cpp  替换地址.txt
include/: audio_capture.h
models/: README.md
scripts/: setup-git-hooks.bat  setup-git-hooks.sh  setup-git-template.bat  setup-git-template.sh  update-version.bat  update-version.ps1  update-version.sh
src/: audio.py  audio.rs  audio_capture.cpp  downloader.py  downloader.rs  main-demo.rs  main.cpp  main.py  main.rs  transcriber.py  transcriber.rs  ui.py  ui.rs  ui.rs.bak
temp/whisper-rs-fix/: Cargo.toml
whisper.cpp/: CMakeLists.txt
