п»ҝ[package]
name = "autotalk"
version = "0.1.0"
edition = "2021"
authors = ["Author"]
description = "й«ҳжҖ§иғҪзҡ„жЎҢйқўз«Ҝе®һж—¶иҜӯйҹіиҪ¬ж–Үеӯ—зЁӢпҝҪ?

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# йҹійў‘еӨ„зҗҶ
cpal = "0.15.2"
hound = "3.5.1"
rubato = "0.14.1"

# иҜӯйҹіиҜҶеҲ«
# дҪҝз”Ёзңҹе®һзҺҜеўғ (йңҖиҰҒLLVMгҖҒClangе’ҢCMake)
whisper-rs = { version = "0.14.0", optional = true }

# GUIжЎҶжһ¶
egui = "0.23.0"
eframe = "0.23.0"
image = { version = "0.24", features = ["jpeg", "png"] }
rfd = "0.12"

# ж—Ҙеҝ—
log = "0.4"
env_logger = "0.10"

# ејӮжӯҘиҝҗиЎҢпҝҪ?
tokio = { version = "1.32.0", features = ["full", "macros", "rt-multi-thread", "fs"] }

# й”ҷиҜҜеӨ„зҗҶ
anyhow = "1.0"
thiserror = "1.0.48"

# е‘Ҫд»ӨиЎҢеҸӮж•°и§ЈпҝҪ?
clap = { version = "4.4", features = ["derive"] }

# дёӢиҪҪ
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3.28"
indicatif = "0.17.7"
directories = "5.0.1"
bytes = "1.5.0"

# еүӘиҙҙпҝҪ?
arboard = "3.2.0"

# дёәwinapiж·»еҠ зјәе°‘зҡ„зү№пҝҪ?
winapi = { version = "0.3.9", features = ["winuser", "windef", "winbase", "wingdi", "winnt", "libloaderapi"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[features]
default = []
real_whisper = ["whisper-rs"] 
