[package]
name = "autotalk"
version = "0.1.7"
edition = "2021"
authors = ["Author"]
description = "高性能的桌面端实时语音转文字程序"
[dependencies]
# 音频处理
cpal = "0.15.2"
hound = "3.5.1"
rubato = "0.14.1"
# 语音识别
# 使用真实环境 (需要LLVM、Clang和CMake)
whisper-rs = { version = "0.14.0", optional = true }
# GUI框架
egui = "0.23.0"
eframe = "0.23.0"
image = { version = "0.24", features = ["jpeg", "png"] }
rfd = "0.12"
# 日志
log = "0.4"
env_logger = "0.10"
# 异步运行
tokio = { version = "1.32.0", features = ["full", "macros", "rt-multi-thread", "fs"] }
# 错误处理
anyhow = "1.0"
thiserror = "1.0.48"
# 命令行参数解析
# ... existing code ...
# 下载
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3.28"
indicatif = "0.17.7"
directories = "5.0.1"
bytes = "1.5.0"
# 剪贴板
# ... existing code ...
# 为winapi添加缺少的特性
winapi = { version = "0.3.9", features = ["winuser", "windef", "winbase", "wingdi", "winin", "libloaderapi"] }
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
[features]
default = []
real_whisper = ["whisper-rs"] 
